--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 />
     <meta
       name="description"
-      content="מחשבון גימלים לפי התואי החדש"
+      content="מחשבון גימלים לפי התוואי החדש"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
