--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
 
   gtag('config', 'G-M3G1YPMDFG');
 </script>
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1998355209497297"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
